--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,30 @@
 # Dependencies
 markdown:         redcarpet
 highlighter:      pygments
+highlighter: true
+
 
 # Permalinks
 permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+title:            Sepanda Pouryahya
+tagline:          'Mathematician, Data Scientist, Nonlinear Dynamicist'
+description:      'Mathematician, Data Scientist, Nonlinear Dynamicist'
+#url:              http://hyde.getpoole.com
+url:              /
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Sepanda Pouryahya'
+#  url:            https://twitter.com/mdo
 
-paginate:         5
+paginate:         1
 
 # Custom vars
 version:          2.1.0
 
 github:
   repo:           https://github.com/poole/hyde
+  me: https://github.com/sepanda
